--- a/wcc/index.html
+++ b/wcc/index.html
@@ -35,17 +35,25 @@
 			<div class="ui huge inverted header">
 				<h1 style="font-size: 2em;">What Class Classification</h1>
 			</div>
+			
+			<div class="content">
+				<a class="ui purple image label" href="https://github.com/wr786/What-Class-Classification" target="_blank"><img src="./images/avatar/avatar.jpg">wr786</a>
+			</div>
+			
 			<div class="ui huge search" id="quickSearch">
 				<div class="ui icon input">
-				  <input class="prompt" type="text" placeholder="查找你想知道的通选课...">
-				  <i class="search icon"></i>
+					<input class="prompt" type="text" placeholder="查找你想知道的通选课...">
+					<i class="search icon"></i>
 				</div>
 				<div class="results"></div>
 			</div>
+			<div class="textarea"></div>
+			
 		</div>
 	</div>
 
 	<script>
+		// 懒得改了
 		var content = [
 			{title:'古今数学思想A' },
 			{title:'数值方法:原理、算法及应用A' },
