added 艺美 by Eve in 树洞

--- a/wcc/index.html
+++ b/wcc/index.html
@@ -58,7 +58,7 @@
 			{title:'古今数学思想A' },
 			{title:'数值方法:原理、算法及应用A' },
 			{title:'普通统计学A' },
-			{title:'音乐与数学A、E，艺美' },
+			{title:'音乐与数学A、E (艺美)' },
 			{title:'面向复杂性的系统思维F' },
 			{title:'演示物理学A' },
 			{title:'人类生存发展与核科学A' },
@@ -90,7 +90,7 @@
 			{title:'地史中的生命A' },
 			{title:'地球环境与人类社会A、F' },
 			{title:'世界文化地理A、B' },
-			{title:'现当代建筑赏析E，艺美' },
+			{title:'现当代建筑赏析E (艺美)' },
 			{title:'中国历史地理A、D' },
 			{title:'自然保护学A、F' },
 			{title:'生态学导论A、F' },
@@ -103,7 +103,7 @@
 			{title:'广告学概论B' },
 			{title:'中国图书出版史D' },
 			{title:'汉语修辞学E' },
-			{title:'世界电影史D、E，艺美' },
+			{title:'世界电影史D、E (艺美)' },
 			{title:'跨文化交流学B' },
 			{title:'英语新闻阅读E' },
 			{title:'影像与社会B' },
@@ -124,7 +124,7 @@
 			{title:'唐宋诗词名篇精读(一)E' },
 			{title:'国学经典讲论E' },
 			{title:'古代小说名著导读E' },
-			{title:'影片精读E，艺美' },
+			{title:'影片精读E (艺美)' },
 			{title:'文学概论E' },
 			{title:'民俗研究E' },
 			{title:'中华人民共和国史专题D' },
@@ -188,7 +188,7 @@
 			{title:'逻辑与批判性思维C' },
 			{title:'印度佛教史C' },
 			{title:'基督教和中国文化C、E' },
-			{title:'东正教艺术C、E，艺美' },
+			{title:'东正教艺术C、E (艺美)' },
 			{title:'道教史C、D' },
 			{title:'西方政治思想（中世纪）C' },
 			{title:'西方政治思想（中世纪）讨论班C' },
@@ -255,7 +255,7 @@
 			{title:'广告学概论B' },
 			{title:'中国名著导读E' },
 			{title:'电子资源的检索与利用A' },
-			{title:'视觉圣经--西方艺术中的基督教E，艺美' },
+			{title:'视觉圣经--西方艺术中的基督教E (艺美)' },
 			{title:'社会性别研究B' },
 			{title:'教育社会学思考B' },
 			{title:'人类学导论B' },
@@ -270,36 +270,36 @@
 			{title:'东方文学史E' },
 			{title:'泰戈尔导读E' },
 			{title:'古代东方文明D、E' },
-			{title:'日本文化艺术专题E，艺美' },
+			{title:'日本文化艺术专题E (艺美)' },
 			{title:'圣经概述和导读B' },
 			{title:'东南亚文化E' },
 			{title:'中日文化交流史D、E' },
 			{title:'印度宗教E' },
 			{title:'阿拉伯伊斯兰文化C' },
 			{title:'德语名家中国著述选读E' },
-			{title:'禅与园林艺术E，艺美' },
+			{title:'禅与园林艺术E (艺美)' },
 			{title:'传记文学：经典人物研究E' },
 			{title:'西方文学名著导读E' },
-			{title:'俄罗斯艺术史E，艺美' },
+			{title:'俄罗斯艺术史E (艺美)' },
 			{title:'中俄文化交流史D、E' },
 			{title:'欧洲文学选读E' },
 			{title:'圣经释读E' },
 			{title:'莎士比亚名篇赏析E' },
 			{title:'周易精读C' },
 			{title:'奥林匹克文化B' },
-			{title:'西方音乐欣赏E，艺美' },
-			{title:'中国美术史D、E，艺美' },
-			{title:'经典昆曲欣赏E，艺美' },
-			{title:'浪漫主义时代的欧洲音乐E，艺美' },
-			{title:'影视鉴赏E，艺美' },
-			{title:'艺术与审美E，艺美' },
-			{title:'基本乐理与管弦乐基础E，艺美' },
-			{title:'中外名曲赏析E，艺美' },
-			{title:'中国电影史D、E，艺美' },
-			{title:'中国流行音乐流变E，艺美' },
-			{title:'中国美术概论E，艺美' },
-			{title:'西方歌剧简史与名作赏析E，艺美' },
-			{title:'西方美术史D、E，艺美' },
+			{title:'西方音乐欣赏E (艺美)' },
+			{title:'中国美术史D、E (艺美)' },
+			{title:'经典昆曲欣赏E (艺美)' },
+			{title:'浪漫主义时代的欧洲音乐E (艺美)' },
+			{title:'影视鉴赏E (艺美)' },
+			{title:'艺术与审美E (艺美)' },
+			{title:'基本乐理与管弦乐基础E (艺美)' },
+			{title:'中外名曲赏析E (艺美)' },
+			{title:'中国电影史D、E (艺美)' },
+			{title:'中国流行音乐流变E (艺美)' },
+			{title:'中国美术概论E (艺美)' },
+			{title:'西方歌剧简史与名作赏析E (艺美)' },
+			{title:'西方美术史D、E (艺美)' },
 			{title:'学术规范与论文写作B' },
 			{title:'数字化艺术A' },
 			{title:'微电子学概论A' },
