--- a/wcc/index.html
+++ b/wcc/index.html
@@ -316,7 +316,8 @@
 			{title:'孙子兵法导读B' },
 			{title:'中医养生学A' },
 			{title:'医学发展概论A' },
-			{title:'健康的生活方式与健康传播B' }
+			{title:'健康的生活方式与健康传播B' },
+			{title:'金庸小说研究E' }
 		];
 
 		$('#quickSearch').search({source: content});
