--- a/wcc/index.html
+++ b/wcc/index.html
@@ -40,6 +40,10 @@
 				<a class="ui purple image label" href="https://github.com/wr786/What-Class-Classification" target="_blank"><img src="./images/avatar/avatar.jpg">wr786</a>
 			</div>
 			
+			<div class="content">
+				<a class="ui orange image label" href="https://greasyfork.org/zh-CN/scripts/411567" target="_blank"><img src="./images/icons/tampermonkey.png">点击获取脚本</a>
+			</div>
+
 			<div class="ui huge search" id="quickSearch">
 				<div class="ui icon input">
 					<input class="prompt" type="text" placeholder="查找你想知道的通选课...">
