修正《中俄文化交流史》的课程类别

--- a/wcc/index.html
+++ b/wcc/index.html
@@ -285,7 +285,7 @@
 			{title:'传记文学：经典人物研究E' },
 			{title:'西方文学名著导读E' },
 			{title:'俄罗斯艺术史E (艺美)' },
-			{title:'中俄文化交流史D、E' },
+			{title:'中俄文化交流史E' },
 			{title:'欧洲文学选读E' },
 			{title:'圣经释读E' },
 			{title:'莎士比亚名篇赏析E' },
